# surveillant

./: Makefile  README.md  main.c  main.h
docs/: Surveillant.gaphor  credits.md  index.md
lv_resources/: corner.c  lv_resources.mk  main_font.c  secondary_font.c  tertiary_font.c
src/: CMakeLists.txt  config.txt  main.cpp  main.hpp  startup.service  startup.sh  theme.json
src/assets/: config.h
src/config/: config.h
src/libraries/: lv_conf.h  lv_drv_conf.h
src/server/: Cargo.toml  README.md  surveillant.service  surveillant.sh
src/server/src/: lib.rs  main.rs
src/services/display_service/: dashboard.hpp  display_init.hpp  init.cpp  init.hpp  styling.hpp
src/services/socket_service/: init.hpp  socket_init.hpp
src/themes/: blue_theme.json  dark_theme.json  default_theme.json  nord_theme.json  panda_theme.json
